Correct fullscreen layout
Scrollbars don't show up now.

--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 html, body, #map-canvas-container, #map-canvas, #right-panel {
-    height: 100%
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    padding: 0;
 }
 
 #map-canvas-container {
